--- a/starter/write/write.html
+++ b/starter/write/write.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="/write/write.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://kit.fontawesome.com/8650370936.js" crossorigin="anonymous"></script>
-  <script src="write.js"></script>
+  <script defer src="/write/write.js"></script>
 
 
 </head>
@@ -40,7 +40,7 @@
     <i class="fa fa-list-ol" aria-hidden='true'></i>
   </button>
   <button type ="button" data-cmd='insertOrderedList'>
-    <i class="fhoa fa-list-ul" aria-hidden='true'></i>
+    <i class="fa fa-list-ul" aria-hidden='true'></i>
   </button>
   <button type ="button" data-cmd='insertImage'>
     <i class="fa fa-file-image-o" aria-hidden="true"></i>
@@ -49,7 +49,7 @@
     <i class="fa fa-link" aria-hidden='true'></i>
   </button>
 </form>
-<iframe id = "output" name='textField'></iframe>
+<iframe id = "output" name='textField' contenteditable="true"></iframe>
 
 
 
